[tool.poetry]
name = "pan-python-examples"
version = "0.1.0"
description = "Educational examples of using Python against Palo Alto Networks platforms"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pan-os-python = "^1.7.3"
graphviz = "^0.20.1"
xmltodict = "^0.13.0"
python-dotenv = "^0.21.0"
pandas = "^1.5.2"
tabulate = "^0.9.0"
argparse = "^1.4.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
invoke = "^1.7.3"
ipdb = "^0.13.9"
ipykernel = "^6.19.2"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
